this is my another day of learning js i am so happy hurry

--- a/Java script/js-learning-days/day19/index.html
+++ b/Java script/js-learning-days/day19/index.html
@@ -25,6 +25,7 @@
     <h1>People enterd</h1>
     <h2 id="count-el">0</h2>
     <button id="increment-box" onclick="increment()">Increment</button>
+    <button id="save-btn" onclick="save()">Save</button>
     <script src="counter.js"></script>
 </body>
 </html>
