another day of learning js today i learn something intresting 'How to play a poker'

--- a/Java script/js-learning-days/day20/calculator.html
+++ b/Java script/js-learning-days/day20/calculator.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
-    <span id="num1-el"></span>
+    <span id="num1-el"></span><br>
     <span id="num2-el"></span>
     <br>
     <button onclick="add()">Add</button>
@@ -16,7 +16,7 @@
     <button onclick="divide()">Divide</button>
     <button onclick="multiply()">Multiply</button>
     <br>
-    <span id="sum-el">Sum:</span>
+    <span id="sum-el">Result:</span>
     <script src="calculator.js"></script>
 </body>
 </html>
