today i lern loop variable and lots of amzing stuff

--- a/Java script/js-learning-days/day21/card.html
+++ b/Java script/js-learning-days/day21/card.html
@@ -17,6 +17,7 @@
     
     <button onclick="startGame()">Start Game</button>
     <button onclick="newCard()">New Card</button>
+    <p id="player-el"></p>
     </main>
     
     <script src="card.js"></script>
